; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_dlil_post_complete_msg.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_dlil_post_complete_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.kev_msg = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dlil_post_complete_msg(%struct.ifnet* %0, %struct.kev_msg* %1) #0 {
  %3 = alloca %struct.ifnet*, align 8
  %4 = alloca %struct.kev_msg*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %3, align 8
  store %struct.kev_msg* %1, %struct.kev_msg** %4, align 8
  %5 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %6 = icmp ne %struct.ifnet* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load %struct.ifnet*, %struct.ifnet** %3, align 8
  %9 = call i32 @ifnet_increment_generation(%struct.ifnet* %8)
  br label %10

10:                                               ; preds = %7, %2
  %11 = load %struct.kev_msg*, %struct.kev_msg** %4, align 8
  %12 = call i32 @kev_post_msg(%struct.kev_msg* %11)
  ret i32 %12
}

declare dso_local i32 @ifnet_increment_generation(%struct.ifnet*) #1

declare dso_local i32 @kev_post_msg(%struct.kev_msg*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
